RESOLVED FIXED136349
WebKit2 doesn't support viewer services that accept image attachments
https://bugs.webkit.org/show_bug.cgi?id=136349
Summary WebKit2 doesn't support viewer services that accept image attachments
Tim Horton
Reported 2014-08-28 13:42:16 PDT
Attachments
patch (1.60 KB, patch)
2014-08-28 13:42 PDT, Tim Horton
beidson: review+
Tim Horton
Comment 1 2014-08-28 13:42:51 PDT
Enrica Casucci
Comment 2 2014-08-28 13:44:13 PDT
Comment on attachment 237325 [details] patch Oops. I missed that.
Tim Horton
Comment 3 2014-08-28 13:46:43 PDT
Note You need to log in before you can comment on or make changes to this bug.