WebKit2 doesn't support viewer services that accept image attachments https://bugs.webkit.org/show_bug.cgi?id=136349 <rdar://problem/18164606>

Reviewed by Brady Eidson.

* Shared/WebProcessCreationParameters.cpp:
(WebKit::WebProcessCreationParameters::encode):
(WebKit::WebProcessCreationParameters::decode):
Encode the already-existing parameter.


Canonical link: https://commits.webkit.org/154177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173078 268f45cc-cd09-0410-ab3c-d52691b4dbfc